# react-native-ultra-base64

./: .gitignore  CONTRIBUTING.md  README.md  package.json  react-native-ultra-base64.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/java/com/ultrabase64/: UltraBase64Module.kt  UltraBase64Package.kt
cpp/: react-native-turbo-base64.cpp  react-native-ultra-base64.cpp  react-native-ultra-base64.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/ultrabase64/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/TurboBase64Example.xcodeproj/: project.pbxproj
example/ios/UltraBase64Example/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/UltraBase64Example.xcodeproj/: project.pbxproj
example/ios/UltraBase64Example.xcodeproj/xcshareddata/xcschemes/: UltraBase64Example.xcscheme
example/ios/UltraBase64Example.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx  Benchmarks.tsx
example/src/tests/: basics.ts  big-data.ts  convert.ts  corrupt.ts  linebreaks.ts  url-safe.ts  zero.ts
ios/: UltraBase64.h  UltraBase64.mm
src/: index.tsx
